// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chart-config builds deterministic duration histogram config 1`] = `
Object {
  "config": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#a371f7",
          "data": Array [
            1,
            1,
            0,
            1,
            1,
          ],
          "label": "Specs",
        },
      ],
      "labels": Array [
        "0-30s",
        "30-60s",
        "60-300s",
        "300-600s",
        ">600s",
      ],
    },
    "options": Object {
      "animation": false,
      "plugins": Object {
        "legend": Object {
          "display": true,
        },
        "title": Object {
          "display": true,
          "text": "E2E spec duration distribution",
        },
      },
      "responsive": false,
      "scales": Object {
        "y": Object {
          "beginAtZero": true,
          "ticks": Object {
            "precision": 0,
          },
        },
      },
    },
    "type": "bar",
  },
  "name": "duration-histogram",
}
`;

exports[`chart-config builds deterministic feature totals config 1`] = `
Object {
  "config": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#f0883e",
          "data": Array [
            601,
            311,
            60,
          ],
          "label": "Total duration, seconds",
        },
      ],
      "labels": Array [
        "Network",
        "VM",
        "Disk",
      ],
    },
    "options": Object {
      "animation": false,
      "plugins": Object {
        "legend": Object {
          "display": true,
        },
        "title": Object {
          "display": true,
          "text": "E2E duration by feature",
        },
      },
      "responsive": false,
      "scales": Object {
        "y": Object {
          "beginAtZero": true,
        },
      },
    },
    "type": "bar",
  },
  "name": "feature-totals",
}
`;

exports[`chart-config builds deterministic status stacked config 1`] = `
Object {
  "config": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#3fb950",
          "data": Array [
            0,
            0,
            10,
          ],
          "label": "passed",
        },
        Object {
          "backgroundColor": "#f85149",
          "data": Array [
            0,
            0,
            301,
          ],
          "label": "failed",
        },
        Object {
          "backgroundColor": "#d29922",
          "data": Array [
            0,
            601,
            0,
          ],
          "label": "errors",
        },
        Object {
          "backgroundColor": "#8b949e",
          "data": Array [
            60,
            0,
            0,
          ],
          "label": "skipped",
        },
      ],
      "labels": Array [
        "Disk",
        "Network",
        "VM",
      ],
    },
    "options": Object {
      "animation": false,
      "plugins": Object {
        "legend": Object {
          "display": true,
        },
        "title": Object {
          "display": true,
          "text": "E2E duration by feature and status",
        },
      },
      "responsive": false,
      "scales": Object {
        "x": Object {
          "stacked": true,
        },
        "y": Object {
          "beginAtZero": true,
          "stacked": true,
        },
      },
    },
    "type": "bar",
  },
  "name": "status-stacked",
}
`;

exports[`chart-config builds deterministic top-N config 1`] = `
Object {
  "config": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#58a6ff",
          "data": Array [
            601,
            301,
            60,
          ],
          "label": "Duration, seconds",
        },
      ],
      "labels": Array [
        "error",
        "slow fail",
        "medium skip",
      ],
    },
    "options": Object {
      "animation": false,
      "indexAxis": "y",
      "plugins": Object {
        "legend": Object {
          "display": true,
        },
        "title": Object {
          "display": true,
          "text": "Top slowest E2E specs",
        },
      },
      "responsive": false,
      "scales": Object {
        "x": Object {
          "beginAtZero": true,
        },
      },
    },
    "type": "bar",
  },
  "name": "top-slowest",
}
`;
